uptade navbar in all pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Engitech</title>
+    <title>Magnion</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -650,7 +650,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <div class="ot-heading">
-                                <span class="text-primary-light">// why choose us</span>
+                                <span class="text-primary-light">M-Approach </span>
                                 <h2 class="main-heading text-white">Our Blueprint of Operational Excellence
                                 </h2>
                             </div>
@@ -663,8 +663,8 @@
                                 <span class="big-number">01</span>
                                 <div class="icon-main"><span class="flaticon-tablet"></span></div>
                                 <div class="content-box">
-                                    <h5>Analysis</h5>
-                                    <div> Thorough assessment of client needs and project scope.</div>
+                                    <h5>Methodize</h5>
+                                    <div> Thorough and systematic assessment of client needs and project scope.                                   </div>
                                     <!-- <a href="why-choose-us.html" class="btn-details"><i class="flaticon-right-arrow-1"></i> LEARN MORE</a> -->
                                 </div>
                             </div>
@@ -674,8 +674,8 @@
                                 <span class="big-number">02</span>
                                 <div class="icon-main"> <span class="flaticon-ui"></span></div>
                                 <div class="content-box">
-                                    <h5>Strategy</h5>
-                                    <div>Tailored planning aligned with client goals and market demands.</div>
+                                    <h5>Manage</h5>
+                                    <div>Detailed planning tailored to align with client goals and market demands.</div>
                                     <!-- <a href="why-choose-us.html" class="btn-details"><i class="flaticon-right-arrow-1"></i> LEARN MORE</a> -->
                                 </div>
                             </div>
@@ -685,7 +685,7 @@
                                 <span class="big-number">03</span>
                                 <div class="icon-main"><span class="flaticon-report"></span></div>
                                 <div class="content-box">
-                                    <h5>Execution</h5>
+                                    <h5>Mold</h5>
                                     <div>Precise implementation and attention to detail in strategies.
                                         </div>
                                     <!-- <a href="why-choose-us.html" class="btn-details"><i class="flaticon-right-arrow-1"></i> LEARN MORE</a> -->
@@ -697,8 +697,8 @@
                                 <span class="big-number">04</span>
                                 <div class="icon-main"><span class="flaticon-shield"></span></div>
                                 <div class="content-box">
-                                    <h5>Iterate</h5>
-                                    <div> Continuous evaluation and refinement of processes and strategies.
+                                    <h5>Mobilize</h5>
+                                    <div> Careful and continuous evaluation, refining processes and strategies
                                         </div>
                                     <!-- <a href="why-choose-us.html" class="btn-details"><i class="flaticon-right-arrow-1"></i> LEARN MORE</a> -->
                                 </div>
