--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@
                                             <li class="menu-item-has-children"><a href="#">Company</a>
                                                 <ul class="sub-menu">
                                                     <li><a href="about-us.html">About us</a></li>
-                                                    <li><a href="why-choose-us.html">Why Choose Us</a></li>
+                                                    <li><a href="m-approach.html">Why Choose Us</a></li>
                                                     <!--<li><a href="our-team.html">Our team</a></li>
                                                     <li><a href="single-team.html">Single team</a></li>
                                                     <li class="menu-item-has-children"><a href="shop.html">Shop</a>
@@ -241,11 +241,15 @@
                         <div class="col-lg-6 align-self-center mb-30 mb-lg-0">
                             <div class="ot-heading">
                                 <span>// what we offer</span>
-                                <h2 class="main-heading">Your Partner for <br> Software Innovation</h2>
+                                <h2 class="main-heading">Your Gateway to <br> Digital Evolution</h2>
                             </div>
                             <div class="space-5"></div>
-                            <p>Engitech is the partner of choice for many of the world’s leading enterprises, SMEs and technology challengers. We help businesses elevate their value through custom software development, product design, QA and consultancy services.</p>
-                            <p><em class="text-dark"><strong>We can help to maintain and modernize your IT infrastructure and solve various infrastructure-specific issues a business may face.</strong></em></p>
+                            <p>Magnion Technology Factory is a pioneering force in the realm of tech solutions. Specializing in seamless digital transformations, we excel in crafting bespoke strategies that propel businesses forward in the digital landscape. Our commitment to excellence and innovation positions us as your dedicated ally in achieving unparalleled success in the digital sphere.
+                            </p>
+                            <p><em class="text-dark"><strong> <span class="font-bold">Mission:</span> Our mission is to drive digital evolution by crafting innovative, tailored solutions that empower businesses to thrive in the dynamic digital landscape. 
+                            <br>
+                            <span class="font-bold">Vision:</span> Our vision is to be at the forefront of digital transformation, recognized for our unwavering commitment to excellence, innovation, and impactful solutions.</strong>
+                        </em></p>
                             <div class="space-20"></div>
                             <div class="video-popup style-2">
                                 <div class="btn-inner">
@@ -263,7 +267,7 @@
                                 <div class="col-lg-6 col-md-6">
                                     <a class="ot-image-box v3 st1" href="it-services.html">
                                         <div class="overlay">
-                                            <h4>Our Mission</h4>
+                                            <h4>Integrity</h4>
                                         </div>
                                         <img src="images/image-box1.jpg" alt="Our Mission">
                                     </a>
@@ -271,7 +275,7 @@
                                 <div class="col-lg-6 col-md-6">
                                     <a class="ot-image-box v3 st2" href="it-services.html">
                                         <div class="overlay">
-                                            <h4>Our Vision</h4>
+                                            <h4>Innovation  </h4>
                                         </div>
                                         <img src="images/image-box2.jpg" alt="Our Vision">
                                     </a>
@@ -279,7 +283,7 @@
                                 <div class="col-lg-6 col-md-6">
                                     <a class="ot-image-box v3 st3" href="it-services.html">
                                         <div class="overlay">
-                                            <h4>Our Philosophy</h4>
+                                            <h4>Collaboration</h4>
                                         </div>
                                         <img src="images/image-box3.jpg" alt="Our Philosophy">
                                     </a>
@@ -287,7 +291,8 @@
                                 <div class="col-lg-6 col-md-6">
                                     <a class="ot-image-box v3 st4 mb-0" href="it-services.html">
                                         <div class="overlay">
-                                            <h4>Our Strategy</h4>
+                                            <h4>Excellence
+                                            </h4>
                                         </div>
                                         <img src="images/image-box4.jpg" alt="Our Strategy">
                                     </a>
@@ -296,8 +301,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <div class="padding-half bg-light-1">
+            </section><br>
+            <!-- <div class="padding-half bg-light-1">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -524,7 +529,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="about-counter">
                 <div class="container">
                     <div class="row">
