--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                             <li class="menu-item-has-children"><a href="#">Company</a>
                                                 <ul class="sub-menu">
                                                     <li><a href="about-us.html">About us</a></li>
-                                                    <li><a href="m-approach.html">Why Choose Us</a></li>
+                                                    <li><a href="m-approach.html">M-Approach</a></li>
                                                     <!--<li><a href="our-team.html">Our team</a></li>
                                                     <li><a href="single-team.html">Single team</a></li>
                                                     <li class="menu-item-has-children"><a href="shop.html">Shop</a>
@@ -168,7 +168,7 @@
                                 <li class="menu-item-has-children"><a href="#">Company</a>
                                     <ul class="sub-menu">
                                         <li><a href="about-us.html">About us</a></li>
-                                        <li><a href="m-approach.html">Why Choose Us</a></li>
+                                        <li><a href="m-approach.html">M-Approach</a></li>
                                         <!--<li><a href="our-team.html">Our team</a></li>
                                         <li><a href="single-team.html">Single team</a></li>
                                         <li class="menu-item-has-children"><a href="shop.html">Shop</a>
