--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                                             <li class="menu-item-has-children"><a href="#">Company</a>
                                                 <ul class="sub-menu">
                                                     <li><a href="about-us.html">About us</a></li>
-                                                    <li><a href="m-approach.html">Why Choose Us</a></li>
+                                                    <li><a href="m-approach.html">M-Approach</a></li>
                                                     <!--<li><a href="our-team.html">Our team</a></li>
                                                     <li><a href="single-team.html">Single team</a></li>
                                                     <li class="menu-item-has-children"><a href="shop.html">Shop</a>
@@ -79,7 +79,7 @@
                                                     <li><a href="cooming-soon.html">Coming Soon</a></li>-->
                                                 </ul>
                                             </li>
-                                            <li><a href="#">Services</a></li>
+                                            <li><a href="it-services.html">Services</a></li>
                                             <li><a href="contact.html">Case Study</a></li>
                                             <li><a href="contact.html">Contacts</a></li>
                                         </ul>
@@ -312,62 +312,70 @@
         </div>
 
 
-    <footer id="site-footer" class="site-footer footer-v2">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <img src="images/logo-light.png" alt="">
+        <footer id="site-footer" class="site-footer footer-v1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="widget-footer">
+                            <h5 class="text-white">Services</h5>
+                            <ul class="list-items">
+                                <li class="list-item"><a href="web-development.html">Web Development</a></li>
+                                <li class="list-item"><a href="mobile-development.html">Mobile Development</a></li>
+                                <li class="list-item"><a href="it-services.html">On-Demand Apps</a></li>
+                                <li class="list-item"><a href="our-team.html">Dedicated Team</a></li>
+                                <li class="list-item"><a href="it-services.html">iOS & Android</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--<div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="widget-footer">
+                            <h5 class="text-white">Learn</h5>
+                            <ul class="list-items">
+                                <li class="list-item"><a href="it-services.html">Social Media Platform</a></li>
+                                <li class="list-item"><a href="it-services.html">Business Management Tools</a></li>
+                                <li class="list-item"><a href="it-services.html">Gambling & Betting Web Apps</a></li>
+                                <li class="list-item"><a href="it-services.html">Sports and Fitness App</a></li>
+                                <li class="list-item"><a href="it-services.html">Software as a Service (SaaS)</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="widget-footer">
+                            <h5 class="text-white">Company</h5>
+                            <ul class="list-items">
+                                <li class="list-item"><a href="about-us.html">About Company</a></li>
+                                <li class="list-item"><a href="faq.html">For Customers</a></li>
+                                <li class="list-item"><a href="blog.html">Blog & News</a></li>
+                                <li class="list-item"><a href="contact.html">Careers & Reviews</a></li>
+                                <li class="list-item"><a href="contact.html">Sitemap</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="widget-footer">
+                            <h5 class="text-white">Subscribe</h5>
+                            <p>Follow our newsletter to stay updated  about agency.</p>
+                            <form id="mc4wp-form-1" class="mc4wp-form mc4wp-form-1343" method="post" action="newsletter.php">
+                                <div class="mc4wp-form-fields">
+                                    <div class="subscribe-inner-form">
+                                        <input type="email" name="email" placeholder="Your Email" required="">
+                                        <button type="submit" class="subscribe-btn-icon"><i class="flaticon-telegram"></i></button>
+                                    </div>  
+                                </div>
+                            </form>
+                        </div>
+                    </div>-->
+                </div>
+                <div class="row mt-65">
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <img src="images/logo.png" alt="" class="lazyloaded" data-ll-status="loaded">
+                    </div>
+                    <div class="col-md-6 text-left text-md-right align-self-center">
+                        <p class="copyright-text">Copyright © 2023</p>
+                    </div>
                 </div>
             </div>
-            <div class="space-60"></div>
-            <div class="row justify-content-center">
-                <div class="col-md-4 col-sm-6">
-                    <div class="contact-info box-style2 ft-contact-info">
-                        <div class="box-icon"><i class="flaticon-world-globe"></i></div>
-                        <p>411 University St, Seattle, USA</p>
-                        <h6>Our Address</h6>                                            
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="contact-info box-style2 ft-contact-info">
-                        <div class="box-icon"><i class="flaticon-envelope"></i></div>
-                        <p>contact@mail.net</p>
-                        <h6>Our Mailbox</h6>                                            
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="contact-info box-style2 ft-contact-info">
-                        <div class="box-icon"><i class="flaticon-phone-1"></i></div>
-                        <p>+1 -800-456-478-23</p>
-                        <h6>Our Phone</h6>                                          
-                    </div>
-                </div>
-            </div>
-            <div class="space-65"></div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="footer-menu">
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contacts</a></li>
-                        </ul>
-                    </div>
-                    <div class="space-20"></div>
-                    <p class="copyright-text v2">Copyright © 2020 Engitech by ThemeModern. All Rights Reserved.</p>
-                    <div class="space-26"></div>
-                    <div class="ft-list-icon">
-                        <a class="twitter" href="twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a class="facebook" href="facebook.com"><i class="fab fa-facebook-f"></i></a>
-                        <a class="linkedin" href="linkedin.com"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="instagram" href="instagram.com"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer><!-- #site-footer -->
+        </footer><!-- #site-footer -->
 </div><!-- #page -->
 <a id="back-to-top" href="#" class="show"><i class="flaticon-up-arrow"></i></a>
         <!-- jQuery -->
