--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                                     <li><a href="cooming-soon.html">Coming Soon</a></li>-->
                                                 </ul>
                                             </li>
-                                            <li><a href="#">Services</a></li>
+                                            <li><a href="it-services.html">Services</a></li>
                                             <li><a href="contact.html">Case Study</a></li>
                                             <li><a href="contact.html">Contacts</a></li>
                                         </ul>
@@ -1146,7 +1146,7 @@
             </div>
             <div class="row mt-65">
                 <div class="col-md-6 mb-4 mb-md-0">
-                    <img src="images/logo-light.png" alt="" class="lazyloaded" data-ll-status="loaded">
+                    <img src="images/logo.png" alt="" class="lazyloaded" data-ll-status="loaded">
                 </div>
                 <div class="col-md-6 text-left text-md-right align-self-center">
                     <p class="copyright-text">Copyright © 2023</p>
