make a correction in home page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <div class="octf-col logo-col">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/logo.png" alt="Engitech" class="">
+                                            <img src="images/MTF logo1.png" alt="Engitech" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -84,7 +84,7 @@
                                                 </ul>
                                             </li>
                                             <li><a href="it-services.html">Services</a></li>
-                                            <li><a href="contact.html">Case Study</a></li>
+                                            <li><a href="case-study-main.html">Case Study</a></li>
                                             <li><a href="contact.html">Contacts</a></li>
                                         </ul>
                                     </nav>
@@ -636,7 +636,7 @@
                                 </div>
                                 <div class="home-about-btn">
                                     <div class="ot-button">
-                                        <a href="about-us.html" class="btn-details"><i class="flaticon-right-arrow-1"></i> LEANR MORE ABOUT US</a>
+                                        <a href="about-us.html" class="btn-details"><i class="flaticon-right-arrow-1"></i> LEARN MORE ABOUT US</a>
                                     <div class="space-15"></div>
                                     </div>
                                 </div>
@@ -819,11 +819,9 @@
                                 <div class="row">
                                     <div class="col-md-9 text-md-left text-center mb-4 mb-md-0">
                                         <div class="ot-heading">
-                                            <span>// We Carry more Than Just Good Coding Skills</span>
+                                            <span>// Start Crafting Your Digital Success Story</span>
                                             <h1 class="main-heading">
-                                                Start Crafting Your Digital Success Story
                                                 Let's Build Your Web
-                                                Contact us button navigate to contact page
                                                 </h1>
                                         </div>
                                     </div>
@@ -841,11 +839,11 @@
                         <div class="col-md-5">
                             <div class="ot-heading">
                                 <span>// latest case studies</span>
-                                <h2 class="main-heading">Introduce Our Projects</h2>
+                                <h2 class="main-heading">Our Success Stories</h2>
                             </div>
                         </div>
                         <div class="col-md-7">
-                            <p class="mb-0">Software development outsourcing is just a tool to achieve business goals. But there is no way to get worthwhile results without cooperation and trust between a client company.</p>
+                            <p class="mb-0 ">Explore how our tailored solutions and expertise helped businesses achieve remarkable results in diverse industries.</p>
                         </div>
                     </div>
                 </div>
@@ -1182,7 +1180,7 @@
             //Preloader
             Royal_Preloader.config({
                 mode           : 'logo',
-                logo           : 'images/logo.png',
+                logo           : 'images/MTF logo1.png',
                 logo_size      : [160, 75],
                 showProgress   : true,
                 showPercentage : true,
