--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <div class="octf-col logo-col">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/MTF logo1.png" alt="Engitech" class="">
+                                            <img src="images/logo/mtflogo.png" alt="Magnion" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -134,7 +134,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="Engitech">
+                                <img src="images/logo/mtflogo.png" alt="Magnion">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
