--- a/case-study-main.html
+++ b/case-study-main.html
@@ -51,7 +51,7 @@
                                 <div class="octf-col logo-col">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/MTF logo1.png" alt="Engitech" class="">
+                                            <img src="images/logo/mtflogo.png" alt="magnion" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -130,7 +130,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="Engitech">
+                                <img src="images/logo/mtflogo.png" alt="Engitech">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
