--- a/about-us.html
+++ b/about-us.html
@@ -51,7 +51,7 @@
                                 <div class="octf-col logo-col">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/logo.png" alt="Engitech" class="">
+                                            <img src="images/logo/mtflogo.png" alt="Magnion" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -80,7 +80,7 @@
                                                 </ul>
                                             </li>
                                             <li><a href="it-services.html">Services</a></li>
-                                            <li><a href="contact.html">Case Study</a></li>
+                                            <li><a href="case-study-main.html">Case Study</a></li>
                                             <li><a href="contact.html">Contacts</a></li>
                                         </ul>
                                     </nav>
@@ -130,7 +130,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="Engitech">
+                                <img src="images/logo/mtflogo.png" alt="Magnion">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
@@ -164,7 +164,7 @@
                                 <li class="menu-item-has-children"><a href="#">Company</a>
                                     <ul class="sub-menu">
                                         <li><a href="about-us.html">About us</a></li>
-                                        <li><a href="why-choose-us.html">Why Choose Us</a></li>
+                                        <li><a href="m-approach.html">M-Approach</a></li>
                                         <!--<li><a href="our-team.html">Our team</a></li>
                                         <li><a href="single-team.html">Single team</a></li>
                                         <li class="menu-item-has-children"><a href="shop.html">Shop</a>
@@ -709,7 +709,7 @@
             //Preloader
             Royal_Preloader.config({
                 mode           : 'logo',
-                logo           : 'images/logo.svg',
+                logo           : 'images/logo/mtflogo.png',
                 logo_size      : [160, 75],
                 showProgress   : true,
                 showPercentage : true,
