--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@
                         <div class="col-lg-5 col-md-12 align-self-center">
                             <div class="ot-heading">
                                 <span>// about company</span>
-                                <h2 class="main-heading">Your Partner for <br> Software Innovation</h2>
+                                <h2 class="main-heading">Your Gateway to <br>Digital Evolution</h2>
                             </div>
-                            <p class="mb-15">Engitech is the partner of choice for many of the world’s leading enterprises, SMEs and technology challengers. We help businesses elevate their value through custom software development, product design, QA and consultancy services.</p>
+                            <p class="mb-15">Magnion Technology Factory is a pioneering force in the realm of tech solutions. Specializing in seamless digital transformations, we excel in crafting bespoke strategies that propel businesses forward in the digital landscape. Our commitment to excellence and innovation positions us as your dedicated ally in achieving unparalleled success in the digital sphere.</p>
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-6">
                                     <div class="icon-box-s1">
@@ -621,10 +621,10 @@
                         </div>
                         <div class="offset-lg-1 col-lg-6 col-md-12 align-self-center">
                             <div class="about-right">
-                                <div class="img-small">
+                                <!-- <div class="img-small">
                                     <img class="img-small-1" src="images/home-about-small-1.jpg" alt="">
-                                    <img class="img-small-2" src="images/home-about-small-2.jpg" alt="">
-                                </div>
+                                    <img class="img-small-2" src="images/home-about-small-1.jpg" alt="">
+                                </div> -->
                                 <div class="home-about-video d-flex justify-content-center">
                                     <div class="video-btn align-self-center">
                                         <a href="" alt="replace image" class="btn-play">
@@ -1180,7 +1180,7 @@
             //Preloader
             Royal_Preloader.config({
                 mode           : 'logo',
-                logo           : 'images/MTF logo1.png',
+                logo           : 'images/logo/mtflogo.png',
                 logo_size      : [160, 75],
                 showProgress   : true,
                 showPercentage : true,
