--- a/case-study-main.html
+++ b/case-study-main.html
@@ -51,7 +51,7 @@
                                 <div class="octf-col logo-col">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/logo/mtflogo.png" alt="magnion" class="">
+                                            <img src="images/logo/mtflogo.png" alt="Magnion" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -130,7 +130,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo/mtflogo.png" alt="Engitech">
+                                <img src="images/logo/mtflogo.png" alt="Magnion">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
@@ -574,7 +574,7 @@
             //Preloader
             Royal_Preloader.config({
                 mode           : 'logo',
-                logo           : 'images/logo.svg',
+                logo           :'images/logo/mtflogo.png',
                 logo_size      : [160, 75],
                 showProgress   : true,
                 showPercentage : true,
