--- a/m-approach.html
+++ b/m-approach.html
@@ -51,7 +51,7 @@
                                 <div class="octf-col logo-col">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/logo.png" alt="MTF" class="">
+                                            <img src="images/logo/mtflogo.png" alt="Magnion" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -80,7 +80,7 @@
                                                 </ul>
                                             </li>
                                             <li><a href="it-services.html">Services</a></li>
-                                            <li><a href="contact.html">Case Study</a></li>
+                                            <li><a href="case-study-main.html">Case Study</a></li>
                                             <li><a href="contact.html">Contacts</a></li>
                                         </ul>
                                     </nav>
@@ -130,7 +130,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="Engitech">
+                                <img src="images/logo/mtflogo.png" alt="Magnion">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
@@ -839,7 +839,7 @@
             //Preloader
             Royal_Preloader.config({
                 mode           : 'logo',
-                logo           : 'images/logo.svg',
+                logo           : 'images/logo/mtflogo.png',
                 logo_size      : [160, 75],
                 showProgress   : true,
                 showPercentage : true,
