--- a/portfolio-details-1.html
+++ b/portfolio-details-1.html
@@ -51,7 +51,7 @@
                                 <div class="octf-col logo-col">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/MTF logo1.png" alt="Engitech" class="">
+                                            <img src="images/logo/mtflogo.png" alt="Magnion" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -130,7 +130,7 @@
                     <div class="mlogo_wrapper clearfix">
                         <div class="mobile_logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="Engitech">
+                                <img src="images/logo/mtflogo.png" alt="Magnion">
                             </a>
                         </div>
                         <div id="mmenu_toggle">
@@ -222,7 +222,6 @@
                 </div>
             </div>
         </header>
-
         <div id="content" class="site-content">
             <div class="page-header flex-middle">
                 <div class="container">
@@ -464,7 +463,7 @@
             //Preloader
             Royal_Preloader.config({
                 mode           : 'logo',
-                logo           : 'images/logo.svg',
+                logo           :'images/logo/mtflogo.png',
                 logo_size      : [160, 75],
                 showProgress   : true,
                 showPercentage : true,
