--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
                                         <li><a href="cooming-soon.html">Coming Soon</a></li>-->
                                     </ul>
                                 </li>
-                                <li class="menu-item-has-children"><a href="#">Services</a>
+                                <li class="menu-item-has-children"><a href="it-services.html">Services</a>
                                     <!--<ul class="sub-menu">
                                         <li><a href="it-services.html">It Services</a></li>
                                         <li><a href="web-development.html">Web Development</a></li>
                                         <li><a href="mobile-development.html">Mobile Development</a></li>
                                     </ul>-->
                                 </li>
-                                <li class="menu-item-has-children"><a href="#">Case Study</a>
+                                <li class="menu-item-has-children"><a href="case-study-main.html">Case Study</a>
                                     <!--<ul class="sub-menu">
                                         <li><a href="portfolio-masonry.html">Portfolio Masonry</a></li>
                                         <li><a href="portfolio-carousel.html">Portfolio Carousel</a></li>
