changes for abt in index

--- a/index.html
+++ b/index.html
@@ -603,20 +603,41 @@
                                 <div class="col-lg-6 col-md-6 col-sm-6">
                                     <div class="icon-box-s1">
                                         <div class="icon-main"><span class="flaticon-medal"></span></div>
-                                        <h5>Experience</h5>
+                                        <h5>Methodize</h5>
                                         <div class="line-box"></div>
-                                        <p>Our great team of more than 1400 software experts.</p>
+                                        <p>Thorough and systematic assessment of client needs and project scope.
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6">
                                     <div class="icon-box-s1">
                                         <div class="icon-main"><span class="flaticon-gear"></span></div>
-                                        <h5>Quick Support</h5>
+                                        <h5>Manage</h5>
                                         <div class="line-box"></div>
-                                        <p>We’ll help you test bold new ideas while sharing your.</p>
+                                        <p>Detailed planning tailored to align with client goals and market demands.
+                                        </p>
                                     </div>
                                 </div>
-                                <div class="space-15"></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div class="icon-box-s1">
+                                        <div class="icon-main"><span class="flaticon-medal"></span></div>
+                                        <h5>Mold</h5>
+                                        <div class="line-box"></div>
+                                        <p>Precise implementation and diligent attention to detail in strategies.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div class="icon-box-s1">
+                                        <div class="icon-main"><span class="flaticon-gear"></span></div>
+                                        <h5>Mobilize</h5>
+                                        <div class="line-box"></div>
+                                        <p>Careful and continuous evaluation, refining processes and strategies.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="offset-lg-1 col-lg-6 col-md-12 align-self-center">
